--- a/authentication/authentication-core/pom.xml
+++ b/authentication/authentication-core/pom.xml
@@ -22,12 +22,6 @@
 			<artifactId>kernel-core</artifactId>
 			<version>${kernel-core.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>${commons.lang.version}</version>
-		</dependency>
-
 		<!-- Kernel Logback Impl -->
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
@@ -41,6 +35,13 @@
 			<artifactId>commons-codec</artifactId>
 			<version>${commons.codec.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons.lang.version}</version>
+		</dependency>
+
+		
 
 		<!-- Spring boot -->
 		<dependency>
