--- a/authentication/authentication-internal-service/pom.xml
+++ b/authentication/authentication-internal-service/pom.xml
@@ -7,9 +7,9 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.0.11-SNAPSHOT</version>
+		<version>1.2.0-SNAPSHOT</version>
 	</parent>
-	<version>1.0.11-SNAPSHOT</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<artifactId>authentication-internal-service</artifactId>
 	<name>authentication-internal-service</name>
 	<properties>
@@ -85,6 +85,11 @@
 	  		<artifactId>lombok</artifactId>
 	  		<version>${lombok.version}</version>
   		</dependency>
+  		<dependency>
+		   	<groupId>io.mosip.kernel</groupId>
+		   	<artifactId>kernel-websubclient-api</artifactId>
+		   	<version>${kernel-websubclient-api.version}</version>
+	   </dependency>
 	</dependencies>
 	
 	<build>
