Corrected token_id column reference in entity

--- a/authentication/authentication-common/pom.xml
+++ b/authentication/authentication-common/pom.xml
@@ -147,6 +147,12 @@
 		    <scope>test</scope>
 		</dependency>
 		<dependency>
+	      <groupId>net.bytebuddy</groupId>
+	      <artifactId>byte-buddy</artifactId>
+	      <version>${byte-buddy.version}</version>
+	      <scope>compile</scope>
+	    </dependency>
+		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito2</artifactId>
 			<version>${powermock.version}</version>
