--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -112,6 +112,7 @@
 		<!-- Test & Logging -->
 		<junit.version>4.12</junit.version>
 		<mockito.version>2.23.4</mockito.version>
+		<byte-buddy.version>1.9.3</byte-buddy.version>
 
 		<!-- Lombok -->
 		<lombok.version>1.18.8</lombok.version>
