--- a/authentication/authentication-common/pom.xml
+++ b/authentication/authentication-common/pom.xml
@@ -140,7 +140,18 @@
              </dependency>
             
 		
-		
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>${mockito.version}</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+	      <groupId>net.bytebuddy</groupId>
+	      <artifactId>byte-buddy</artifactId>
+	      <version>${byte-buddy.version}</version>
+	      <scope>compile</scope>
+	    </dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito2</artifactId>
