Mosip 8293 - IDA: AuthType Status Change events in IDA and store the Auth Type status against UIN/VID hash (#151)
* [MOSIP-8293] added websub for auth type status

* [MOSIP-8293] updated auth type status service

* [MOSIP-8293] updated auth type status controller

* [MOSIP-8293] updated autht type status service

* [MOSIP-8293] updated pom

* [MOSIP-8293] updated auth type lock

* [MOSIP-8293] added javadoc

--- a/authentication/authentication-internal-service/pom.xml
+++ b/authentication/authentication-internal-service/pom.xml
@@ -14,6 +14,7 @@
 	<name>authentication-internal-service</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<kernel-websubclient-api.version>1.2.0-SNAPSHOT</kernel-websubclient-api.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -85,11 +86,11 @@
 	  		<artifactId>lombok</artifactId>
 	  		<version>${lombok.version}</version>
   		</dependency>
-  		<dependency>
-		   	<groupId>io.mosip.kernel</groupId>
-		   	<artifactId>kernel-websubclient-api</artifactId>
-		   	<version>${kernel-websubclient-api.version}</version>
-	   </dependency>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-websubclient-api</artifactId>
+			<version>${kernel-websubclient-api.version}</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
