--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -48,7 +48,7 @@
 	<distributionManagement>
                <repository>
                        <id>github</id>
-                       <url>https://maven.pkg.github.com/mosip/commons</url>
+                       <url>https://maven.pkg.github.com/mosip/id-authentication</url>
                </repository> 
         </distributionManagement> 
 	<repositories>
