--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -213,7 +213,7 @@
                          		<additionalJOption>-Xdoclint:none</additionalJOption>
                 	  	</configuration>
                 	</plugin>
-			<plugin>
+<!--			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
 				<version>1.6.7</version>
@@ -223,7 +223,7 @@
 					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 					<autoReleaseAfterClose>false</autoReleaseAfterClose>
 				</configuration>
-			</plugin>
+			</plugin>-->
 		 	<plugin>
 				  <groupId>org.apache.maven.plugins</groupId>
 				  <artifactId>maven-source-plugin</artifactId>
