Move OTP generation to IDA (#211)
* [MOSIP-8893] moved otp generation to IDA

* Disabled auth device validation. To be implemented in next release. (#208)

* [MOSIP-8893] updated otp manager

* [MOSIP-8893] updated test cases

Co-authored-by: Loganathan Sekar <42532387+LoganathanSekar7627@users.noreply.github.com>

--- a/authentication/authentication-common/pom.xml
+++ b/authentication/authentication-common/pom.xml
@@ -188,5 +188,11 @@
 			<artifactId>kernel-biometrics-api</artifactId>
 			<version>${kernel-biometrics-api.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.objenesis</groupId>
+			<artifactId>objenesis</artifactId>
+			<version>${objenesis.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
