integrating external iam adapter (#226)
* 1.1.2 version update (#209)

* Disabled auth device validation. To be implemented in next release. (#208)

* Changed version to 1.1.2-SNAPSHOT

* MOSIP-9575-Removed required field check in allowed kyc attributes (#210)

* reverted exclusion of sleuth dependency (#212)

* Move OTP generation to IDA (#211)

* [MOSIP-8893] moved otp generation to IDA

* Disabled auth device validation. To be implemented in next release. (#208)

* [MOSIP-8893] updated otp manager

* [MOSIP-8893] updated test cases

Co-authored-by: Loganathan Sekar <42532387+LoganathanSekar7627@users.noreply.github.com>

* Fixed OTP used usecase (#214)

* [MOSIP-8893] moved otp generation to IDA

* Disabled auth device validation. To be implemented in next release. (#208)

* [MOSIP-8893] updated otp manager

* [MOSIP-8893] updated test cases

* [MOSIP-8893] fixed phone and email validation

* [MOSIP-8893] fixed otp used scenario

Co-authored-by: Loganathan Sekar <42532387+LoganathanSekar7627@users.noreply.github.com>

* Added request time validation adjustment configuration default value to +/- 5 mins (#215)

* logger json encoding changes (#216)

* logger json encoding changes

* moved logger dependency to parent pom

Co-authored-by: ase-101 <>

* Fix in auth type status store issue due to current time api call (#217)

* Fix in auth transaction store (#218)

* Mosip 8294 fixes (#219)

* [MOSIP-8294] Updated staticToken to responseToken

* [MOSIP-8294] updated response token to auth token

* [MOSIP-8294] updated idgenerator pom

* [MOSIP-8294] updated idgenerator

* [MOSIP-8294] updated tokenid test cases

* [MOSIP-8294] updated pom

* [MOSIP-8294] updated mockito version

* [MOSIP-8294] updated pom version

* [MOSIP-8294] removed token id generator module

* [MOSIP-8294] updated kernel sign

* Fix in policy based auth token generation

Co-authored-by: Manoj SP <Manoj.SP@mindtree.com>



--- a/authentication/authentication-internal-service/pom.xml
+++ b/authentication/authentication-internal-service/pom.xml
@@ -15,6 +15,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<kernel-websubclient-api.version>1.2.0-SNAPSHOT</kernel-websubclient-api.version>
+		<spring.security.test.version>5.0.5.RELEASE</spring.security.test.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -42,11 +43,6 @@
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-cbeffutil-api</artifactId>
 			<version>${kernel-cbeffutil-api.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.mosip.kernel</groupId>
-			<artifactId>kernel-auth-adapter</artifactId>
-			<version>${kernel-auth-adapter.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -90,6 +86,16 @@
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-websubclient-api</artifactId>
 			<version>${kernel-websubclient-api.version}</version>
+		</dependency>
+			<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>${spring.security.test.version}</version>
 		</dependency>
 	</dependencies>
 	
