--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -113,6 +113,7 @@
 
 		<!-- Spring Boot -->
 		<spring.boot.version>2.0.2.RELEASE</spring.boot.version>
+		<spring.security.test.version>5.0.5.RELEASE</spring.security.test.version>
 		<spring-cloud-config.version>2.0.0.RELEASE</spring-cloud-config.version>
 
 		<javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
