--- a/authentication/authentication-otp-service/pom.xml
+++ b/authentication/authentication-otp-service/pom.xml
@@ -7,9 +7,9 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.1.2-rc2</version>
+		<version>1.1.2</version>
 	</parent>
-	<version>1.1.2-rc2</version>
+	<version>1.1.2</version>
 	<artifactId>authentication-otp-service</artifactId>
 	<name>authentication-otp-service</name>
 	<properties>
