--- a/authentication/authentication-service/pom.xml
+++ b/authentication/authentication-service/pom.xml
@@ -6,9 +6,9 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.1.2-rc2</version>
+		<version>1.1.2</version>
 	</parent>
-	<version>1.1.2-rc2</version>
+	<version>1.1.2</version>
 
 	<artifactId>authentication-service</artifactId>
 	<packaging>jar</packaging>
