--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -90,7 +90,7 @@
 		<kernel-biometrics-api.version>${kernel.parent.version}</kernel-biometrics-api.version>
 		<kernel-biosdk-provider.version>${kernel.parent.version}</kernel-biosdk-provider.version>
 		<kernel-websubclient-api.version>${kernel.parent.version}</kernel-websubclient-api.version>
-		<id-repository-core.version>${kernel.parent.version}</id-repository-core.version>
+		<id-repository-core.version>1.2.0-SNAPSHOT</id-repository-core.version>
 		<json.utility.version>20180130</json.utility.version>
 		<!-- Maven Plugins -->
 		<maven.compiler.source>11</maven.compiler.source>
