Ida merge 1.1.2 to develop (#243)
* 1.1.2 version update (#209)

* Disabled auth device validation. To be implemented in next release. (#208)

* Changed version to 1.1.2-SNAPSHOT

* MOSIP-9575-Removed required field check in allowed kyc attributes (#210)

* reverted exclusion of sleuth dependency (#212)

* Move OTP generation to IDA (#211)

* [MOSIP-8893] moved otp generation to IDA

* Disabled auth device validation. To be implemented in next release. (#208)

* [MOSIP-8893] updated otp manager

* [MOSIP-8893] updated test cases

Co-authored-by: Loganathan Sekar <42532387+LoganathanSekar7627@users.noreply.github.com>

* Fixed OTP used usecase (#214)

* [MOSIP-8893] moved otp generation to IDA

* Disabled auth device validation. To be implemented in next release. (#208)

* [MOSIP-8893] updated otp manager

* [MOSIP-8893] updated test cases

* [MOSIP-8893] fixed phone and email validation

* [MOSIP-8893] fixed otp used scenario

Co-authored-by: Loganathan Sekar <42532387+LoganathanSekar7627@users.noreply.github.com>

* Added request time validation adjustment configuration default value to +/- 5 mins (#215)

* logger json encoding changes (#216)

* logger json encoding changes

* moved logger dependency to parent pom

Co-authored-by: ase-101 <>

* Fix in auth type status store issue due to current time api call (#217)

* Fix in auth transaction store (#218)

* Mosip 8294 fixes (#219)

* [MOSIP-8294] Updated staticToken to responseToken

* [MOSIP-8294] updated response token to auth token

* [MOSIP-8294] updated idgenerator pom

* [MOSIP-8294] updated idgenerator

* [MOSIP-8294] updated tokenid test cases

* [MOSIP-8294] updated pom

* [MOSIP-8294] updated mockito version

* [MOSIP-8294] updated pom version

* [MOSIP-8294] removed token id generator module

* [MOSIP-8294] updated kernel sign

* Fix in policy based auth token generation

Co-authored-by: Manoj SP <Manoj.SP@mindtree.com>

* Fix 

--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -73,7 +73,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- Kernel components -->
-		<kernel.parent.version>1.2.0-SNAPSHOT</kernel.parent.version>
+		<kernel.parent.version>1.1.2</kernel.parent.version>
 		<kernel-core.version>${kernel.parent.version}</kernel-core.version>
 		<kernel-keymanager-service.version>${kernel.parent.version}</kernel-keymanager-service.version>
 		<kernel-idgenerator-tokenid.version>1.0.7</kernel-idgenerator-tokenid.version>
@@ -82,14 +82,14 @@
 		<kernel-idobjectvalidator.version>${kernel.parent.version}</kernel-idobjectvalidator.version>
 		<kernel-pinvalidator.version>1.0.6</kernel-pinvalidator.version>
 		<kernel-templatemanager-velocity.version>1.0.6</kernel-templatemanager-velocity.version>
-		<kernel-logger-logback.version>1.2.0-SNAPSHOT</kernel-logger-logback.version>
+		<kernel-logger-logback.version>${kernel.parent.version}</kernel-logger-logback.version>
 		<kernel-dataaccess-hibernate.version>1.0.7</kernel-dataaccess-hibernate.version>
 		<kernel-cbeffutil-api.version>1.1.0</kernel-cbeffutil-api.version>
 		<kernel-templatemanager-velocity.version>1.0.6</kernel-templatemanager-velocity.version>
-		<kernel-auth-adapter.version>1.2.0-SNAPSHOT</kernel-auth-adapter.version>
-		<kernel-biometrics-api.version>1.2.0-SNAPSHOT</kernel-biometrics-api.version>
-		<kernel-biosdk-provider.version>1.2.0-SNAPSHOT</kernel-biosdk-provider.version>
-		<kernel-websubclient-api.version>1.2.0-SNAPSHOT</kernel-websubclient-api.version>
+		<kernel-auth-adapter.version>${kernel.parent.version}</kernel-auth-adapter.version>
+		<kernel-biometrics-api.version>${kernel.parent.version}</kernel-biometrics-api.version>
+		<kernel-biosdk-provider.version>${kernel.parent.version}</kernel-biosdk-provider.version>
+		<kernel-websubclient-api.version>${kernel.parent.version}</kernel-websubclient-api.version>
 		<id-repository-core.version>1.2.0-SNAPSHOT</id-repository-core.version>
 		<json.utility.version>20180130</json.utility.version>
 		<!-- Maven Plugins -->
