--- a/authentication/authentication-service/Dockerfile
+++ b/authentication/authentication-service/Dockerfile
@@ -11,7 +11,8 @@ ARG spring_config_url
 
 ARG bio_sdk_folder=mock/0.9
 
-ARG softhsm_client_zip=client.zip
+# can be passed during Docker build as build time environment for hsm client zip file path
+ARG client_zip_path
 
 # can be passed during Docker build as build time environment for glowroot 
 ARG is_glowroot
@@ -36,7 +37,8 @@ ENV artifactory_url_env=${artifactory_url}
 
 ENV bio_sdk_folder_env=${bio_sdk_folder}
 
-ENV softhsm_client_zip_env=${softhsm_client_zip}
+# environment variable to pass hsm client zip file path, at docker runtime
+ENV zip_file_path=${client_zip_path}
 
 ENV work_dir_env=/
 
