Added directory for additional dependencies/jars.

--- a/authentication/authentication-otp-service/Dockerfile
+++ b/authentication/authentication-otp-service/Dockerfile
@@ -69,6 +69,12 @@ WORKDIR /home/${container_user}
 
 ENV work_dir=/home/${container_user}
 
+ARG loader_path=${work_dir}/additional_jars
+
+RUN mkdir -p ${loader_path}
+
+ENV loader_path_env=${loader_path}
+
 ENV current_module_env=authentication-otp-service
 
 ADD configure_start.sh configure_start.sh
