Added junit tests

--- a/authentication/authentication-core/pom.xml
+++ b/authentication/authentication-core/pom.xml
@@ -88,6 +88,12 @@
 		    <groupId>org.springframework.retry</groupId>
 		    <artifactId>spring-retry</artifactId>
 		    <version>${spring.retry.version}</version>
+		    <exclusions>
+		    	<exclusion>
+		    		<groupId>org.springframework</groupId>
+		    		<artifactId>spring-core</artifactId>
+		    	</exclusion>
+		    </exclusions>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
