Fix for not retrying for unspecified exceptions

--- a/authentication/authentication-core/src/test/resources/application.properties
+++ b/authentication/authentication-core/src/test/resources/application.properties
@@ -6,6 +6,6 @@ ida.retry.exponential.backoff.initial.interval.millisecs=2
 ida.retry.exponential.backoff.multiplier=1.5
 ida.retry.exponential.backoff.max.interval.millisecs=200
 #Comma separated List of fully qualified Exceptions which are retryable (inclusion list)
-ida.retry.retryable.exceptions=java.lang.Exception,io.mosip.authentication.core.exception.IdAuthenticationBaseException
+ida.retry.retryable.exceptions=java.net.SocketTimeoutException,java.sql.SQLException
 #Comma separated List of fully qualified Exceptions which are not-retryable (exclusion list)
-ida.retry.nonretryable.exceptions=java.lang.RuntimeException,io.mosip.authentication.core.exception.IdAuthUncheckedException
+ida.retry.nonretryable.exceptions=java.lang.RuntimeException,java.sql.SQLTimeoutException
