Added config to enable/disable traverse root cause

--- a/authentication/authentication-core/src/test/resources/application.properties
+++ b/authentication/authentication-core/src/test/resources/application.properties
@@ -9,3 +9,5 @@ ida.retry.exponential.backoff.max.interval.millisecs=200
 ida.retry.retryable.exceptions=java.net.SocketTimeoutException,java.sql.SQLException
 #Comma separated List of fully qualified Exceptions which are not-retryable (exclusion list)
 ida.retry.nonretryable.exceptions=java.lang.RuntimeException,java.sql.SQLTimeoutException
+#Traverse the root cause of an exception to use the root cause to decide whether to retry or not
+ida.retry.traverse.root.cause=true
