--- a/authentication/authentication-common/src/test/resources/application.properties
+++ b/authentication/authentication-common/src/test/resources/application.properties
@@ -231,6 +231,8 @@ mosip.supported-languages=eng,ara,fra
 dob.req.date.pattern=dd/MM/yyyy
 dob.entity.date.pattern=yyyy/MM/dd
 datetime.pattern=yyyy-MM-dd'T'HH:mm:ss.SSSXXX
+biometrics.datetime.pattern=yyyy-MM-dd'T'HH:mm:ssXXX
+
 
 #----------------------------------VID------------------------------------------
 mosip.vid.validity.hours=24
