Added unit test for kyc photo. Test fix.

--- a/authentication/authentication-kyc-service/src/test/resources/application.properties
+++ b/authentication/authentication-kyc-service/src/test/resources/application.properties
@@ -294,3 +294,6 @@ mosip.id.validation.identity.email=^[\\w-\\+]+(\\.[\\w]+)*@[\\w-]+(\\.[\\w]+)*(\
 request.idtypes.allowed=VID,UIN
 
 mosip.kernel.otp.default-length=6
+
+uin.masking.required=true
+uin.masking.charcount=2
